fix: harden detectNSFW guards + test coverage
Replaces the silent ternary fallback (probs.length > 0 ? probs[0] : 0f)
with a hard VisionProcessingException on unexpected model output shape.
Defaulting to "normal" with zero confidence on broken inference would
fabricate a safe-classification — violating the project rule that no
data is better than wrong data.

Also pins the guard-clause contract with a dedicated unit test class
covering uninitialised backend, missing model, and null/empty image
input, so the loud-fail behaviour cannot regress.

Drive-by cleanups in the same NSFW block: List.of(result) over
fully-qualified Collections.singletonList, LinkedHashMap to match
classifyDeepfake's predictable attribute ordering, and a Javadoc
update on ActionRecognitionTranslator now that it is shared between
the 15-class action model and the 2-class Falconsai NSFW model.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>